# DetectorNFC

./: 00_TRABAJO_COMPLETADO.md  01_INTEGRACION_COMPLETADA.md  02_RESUMEN_INTEGRACION_FINAL.md  AGENTS.md  ANALISIS_REUTILIZACION_ATESTADOS.md  ARQUITECTURA_DGANALYSIS.md  CAMBIOS_REALIZADOS.md  CHECKLIST_INTEGRACION.md  CODIGO_ADAPTADO_ATESTADOS.md  COMPARATIVA_ATESTADOS_vs_DETECTORNFG.md  DG11_DG13_DIAGNOSTICO.md  DIAGNOSTICO_ERROR_6988_DG11_DG13.md  EuropeanDocuments_DataGroups_Guide.md  FIX_ERROR_6988.md  GUIA_RAPIDA_DG11_DG13.md  INDICE_ANALISIS.md  Implementation_Code_Examples.md  PASOS_PRUEBA_DG11_DG13.md  PROXIMOS_PASOS.md  README.md  RESUMEN_DIAGNOSTICO_DG11_DG13.md  RESUMEN_EJECUTIVO_ATESTADOS.md  Resumen_SDK_NFC_Documentos_Identidad_Europa.md  dniedroid-patched.aar.bak  settings.gradle.kts
SDK_DNIeDroid_FNMT/SDK_DNIeDroid_FNMT_v2_3_111/: leeme_11052023.txt
SDK_DNIeDroid_FNMT/SDK_DNIeDroid_FNMT_v2_3_111/JavaDoc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
SDK_DNIeDroid_FNMT/SDK_DNIeDroid_FNMT_v2_3_111/JavaDoc/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-14.html  index-15.html  index-16.html  (+16 more)
SDK_DNIeDroid_FNMT/SDK_DNIeDroid_FNMT_v2_3_111/Sample_DNIe_App/: settings.gradle
app/: build.gradle.kts
app/libs/: dniedroid-patched.aar  dniedroid-patched.aar.bak2
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jp2_jni.cpp
app/src/main/cpp/openjpeg/: opj_config.h  opj_config_private.h
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+615 files in other folders)
